fix: premiacoes-wrap padding-bottom to 200px

--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ ul{list-style:none}
   align-items:flex-end;
   justify-content:center;
   padding-top:329px;
-  padding-bottom:100px;
+  padding-bottom:200px;
 }
 .premiacoes-left{width:680px;flex-shrink:0}
 .premiacoes-trophy{width:308px;height:327px;flex-shrink:0}
